--- a/HE.html
+++ b/HE.html
@@ -17,12 +17,18 @@
             <div class="item"><a href="#">contact us</a></div>
         </div>
     </div>
-    <div class="heading"><H1><CENTER>Hunger Eradication</CENTER></div>
-    <div class="content"> <P>Ever thought that across the world 811 million people do not have enough food. In India ,20 percent of children under the age of five years are underweight.
-        In this project we are discussing the solutions of Global hunger.
-        Challenges we ran into....
-        <BR>Technology used 
-        <img  id='HE' src="https://www.worldvision.ca/WorldVisionCanada/media/stories/world-hunger-facts-how-to-help-migrating-family.jpg" width="500px" height="400px" align="right">
+    <div class="heading"><H1><CENTER>Hunger Eradication: A Dream Yet To Meet Reality</CENTER></div>
+    <div class="content"> <img src="http://img.picturequotes.com/2/2/1432/an-empty-stomach-is-not-a-good-political-adviser-quote-1.jpg" width="250px" height="300px" align="Right">
+    <BR>
+<P> <align ="left">In India, 20 per cent of children under the age of five years are underweight, and 38 per cent have stunted growth.
+<BR>
+The inefficient management of food available has led to starvation even though there is no scarcity of food in India. According to a report by the United Nations, 40% of the total produce is either lost or wasted. India ranks amongst the highest pedestals when it comes to malnutrition, as more than 200 million of our population has insufficient access to food.
+<BR>
+India houses one-fourth of the world's hungry population. The Global Hunger Index (GHI) ranked India 94th out of 107 countries. The country fares poorly and has been battling widespread hunger for decades together.
+<BR>
+<H2>Contributing Factors:</H2>
+Poverty is one of the most critical factors that contribute to the prevailing hunger crisis in India. The shocking fact remains that two-thirds of the people living in India are poverty-stricken.
+        
         </P></div>
 
 
